# android-chess

./: .classpath  .editorconfig  .gitignore  .project  AndroidManifest.xml  License.md  README.md  build.gradle  gradle.properties
.github/workflows/: android.yml
app/: build.gradle  google-services.json  proguard-rules.txt
artwork/: color-scheme.html  ellipsis-v.xcf
assets/: about-en.html  about-it.html  convergence-it.html  great-games.pgn  help-en.html  help-it.html  help_online-en.html  help_online-it.html  help_pgntool-en.html  help_pgntool-it.html  help_play-it.html  help_practice-en.html  help_practice-it.html  help_puzzle-it.html  help_setup-it.html  puzzles.pgn
gradle/wrapper/: gradle-wrapper.properties
native/: Application.mk
native/project/jni/tests/: CMakeLists.txt  Makefile  README.md  chess-test.cpp  chess-test.h  engine_tests.cpp  main.cpp
res/anim/: slide_left.xml  slide_right.xml
res/color/: text_color.xml
res/drawable/: button_focussed.xml  button_pressed.xml  textview.xml
res/layout/: board.xml  convergence.xml  customcommands.xml  help.xml  ics_chat.xml  ics_stored_row.xml  icsclient.xml  main.xml  options_newgame.xml  pgn_item.xml  practice.xml  puzzle.xml  setup_options.xml  start.xml
res/layout-land/: icsclient.xml  main.xml  pgn_item.xml  practice.xml  puzzle.xml  setup.xml
res/layout-large-land/: main.xml
res/layout-small/: main.xml
res/layout-small-land/: main.xml
res/values/: arrays.xml  dimen.xml  strings.xml  (+2 more)
res/values-it/: arrays.xml  strings.xml
res/values-large/: dimen.xml
res/values-xlarge-land/: dimen.xml
(+764 files in other folders)
